--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
 img {
   padding: var(--spacing);
   background: var(--base);
-  filter: var(--blur);
+  filter: blur(var(--blur));
+}
+
+.hl {
+  color: var(--base);
 }
 
 /*
